--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "hackathon1",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,6 +17,11 @@
   },
   "homepage": "https://github.com/GaiaVedai/12-day-challenge#readme",
   "dependencies": {
-    "body-parser": "^1.18.3"
-  }
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "handlebars": "^4.0.11",
+    "jquery": "^3.3.1",
+    "mongoose": "^5.2.13"
+  },
+  "description": ""
 }
