--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/GaiaVedai/12-day-challenge#readme",
   "dependencies": {
+    "ajax": "0.0.4",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
     "express": "^4.16.3",
-    "handlebars": "^4.0.11",
+    "handlebars": "^4.0.12",
     "jquery": "^3.3.1",
     "mongoose": "^5.2.13"
   },
